[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.10"
board_plugin = { path = "board_plugin" }

bevy-inspector-egui = { version = "0.18.1", optional = true }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[workspace]
members = [
    "board_plugin"
]
